[Fix] -> Elementor editor - Product widget grid design conflict on mobile.

--- a/sass/site/compatibility/woocommerce/woocommerce.scss
+++ b/sass/site/compatibility/woocommerce/woocommerce.scss
@@ -2439,7 +2439,7 @@ p.demo_store,
 			width: 100%;
 		}
 		ul.products a.button {
-			padding: .618em 1em;
+			padding: 0.5em 0.75em;
 			&.loading::after {
 				display: inline-block;
 				margin-left: 5px;
